# infinitecontex

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPILOT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/skills/infinite-context/: SKILL.md
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: scan_benchmark.py
config/: default.json
deployment/systemd/: infinitecontex-watch.service
docs/: architecture.md  cli-behavior-contract.md  cli-reference.md  coding-standards.md  config-reference.md  contributor-workflow.md  data-model-reference.md  deployment-release.md  mental-model.md  observability-diagnostics.md  overview.md  release-versioning-policy.md  restore-pipeline.md  security-privacy.md  storage-format.md  testing-strategy.md  token-optimization.md  troubleshooting.md
editor/: README.md  agent-command-schema.json
examples/: basic-flow.md
packaging/: LOCKFILE_STRATEGY.md
packaging/homebrew/: infinitecontex.rb
scripts/: watch_and_snapshot.py
src/infinitecontex/: __init__.py  __main__.py  cli.py  service.py  version.py
src/infinitecontex/agent/: interface.py
src/infinitecontex/api/: client.py
src/infinitecontex/capture/: chat_auto_discover.py  chat_ingest.py  git_state.py  repo_scan.py  terminal.py  working_set.py
src/infinitecontex/core/: config.py  models.py  policies.py  redaction.py  serde.py
tests/: conftest.py
tests/golden/: test_prompt_golden.py  test_token_budget.py
tests/integration/: test_client_surface.py  test_export_import.py  test_module_entrypoint.py  test_snapshot_restore.py
tests/performance/: test_scan_performance.py
tests/unit/: test_agent_interface.py  test_api_client.py  test_capture_ingest.py  test_chat_auto_discover.py  test_cli.py  test_cli_version.py  test_config.py  test_doctor.py  test_export_security.py  test_graph_consistency.py  test_redaction.py  test_repo_scan.py  test_scan_filters.py  test_service.py  test_storage.py
(+11 files in other folders)
